--- a/spin/src/style.css
+++ b/spin/src/style.css
@@ -1,10 +1,14 @@
+* {
+    font-family: "Kanit", sans-serif;
+}
+
 body {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     width: 100vw;
-    background-color: #9BA4B5;
+    background-color: #9ba4b5;
 }
 
 input[type="number"]::-webkit-inner-spin-button,
@@ -26,9 +30,9 @@ input[type="number"]::-webkit-outer-spin-button {
 .spinner__body {
     position: absolute;
     border-top: 200px solid transparent;
-    border-right: 200px solid #212A3E;
-    border-bottom: 200px solid #212A3E;
-    border-left: 200px solid #212A3E;
+    border-right: 200px solid #212a3e;
+    border-bottom: 200px solid #212a3e;
+    border-left: 200px solid #212a3e;
     z-index: 200;
 }
 .spinner__start-button {
@@ -57,13 +61,13 @@ input[type="number"]::-webkit-outer-spin-button {
 .spinner__start-button:hover {
     height: 150px;
     width: 150px;
-    background-color: #E49393;
+    background-color: #e49393;
     box-shadow: 0px 0px 44px rgba(17, 17, 17, 0.25);
 }
 .spinner__start-button:active {
     height: 135px;
     width: 135px;
-    color: #9BA4B5;
+    color: #9ba4b5;
     background-color: #394867;
     box-shadow: none;
     -webkit-animation: shaking 0.15s ease-in-out infinite;
@@ -78,7 +82,7 @@ input[type="number"]::-webkit-outer-spin-button {
     font-family: "Dosis", sans-serif;
     font-size: 48px;
     font-weight: bold;
-    color: #212A3E;
+    color: #212a3e;
     background: #f5f5f5;
     border-radius: 36px;
     text-align: center;
@@ -91,7 +95,7 @@ input[type="number"]::-webkit-outer-spin-button {
     color: #394867;
 }
 .spinner__input:focus {
-    color: #212A3E;
+    color: #212a3e;
 }
 .spinner__plate {
     position: absolute;
@@ -112,7 +116,7 @@ input[type="number"]::-webkit-outer-spin-button {
     font-family: "Dosis", sans-serif;
     font-weight: bold;
     font-size: 48px;
-    color: #212A3E;
+    color: #212a3e;
     text-align: center;
     transform-origin: 50% 100%;
     z-index: 10;
@@ -199,8 +203,55 @@ input[type="number"]::-webkit-outer-spin-button {
     }
 }
 
-.popup{
-    width: 300px;
+.popup {
+    width: 400px;
     background: #f5f5f5;
     border-radius: 6px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.1);
+    text-align: center;
+    padding: 0 30px 30px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    visibility: hidden;
+    transition: transform 0.4s, top 0.4s;
+}
+
+.open-popup{
+    visibility: visible;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    z-index: 300;
+}
+
+.popup img {
+    width: 150px;
+    margin-top: -60px;
+}
+
+.popup h2 {
+    font-size: 32px;
+    font-weight: 500px;
+    margin: 20px 0 20px;
+}
+
+.popup p {
+    font-size: 18px;
+    font-weight: 500px;
+    margin: 20px 0 20px;
+}
+
+.popup button {
+    color: #f5f5f5;
+    font-family: "Dosis", sans-serif;
+    font-size: 16px;
+    margin-top: 50px;
+    background-color: #394867;
+    border-radius: 5%;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    padding: 10px 20px;
+    outline: none;
+    border: 0;
+    cursor: pointer;
 }
