--- a/spin/src/style.css
+++ b/spin/src/style.css
@@ -90,6 +90,7 @@ input[type="number"]::-webkit-outer-spin-button {
     border: none;
     z-index: 300;
     transition: 0.1s ease-in;
+    visibility: hidden;
 }
 .spinner__input:hover {
     color: #394867;
@@ -236,8 +237,8 @@ input[type="number"]::-webkit-outer-spin-button {
     margin: 20px 0 20px;
 }
 
-.popup p {
-    font-size: 18px;
+.popup h3 {
+    font-size: 22px;
     font-weight: 500px;
     margin: 20px 0 20px;
 }
@@ -254,4 +255,38 @@ input[type="number"]::-webkit-outer-spin-button {
     outline: none;
     border: 0;
     cursor: pointer;
+}
+
+.logo {
+    position: relative;
+    margin-bottom: 5rem;
+    top: 50%;
+    left: 50%;
+    transform: translatex(-50%);
+    color: #212a3e;
+    /* background: #f5f5f5; */
+    border-radius: 3px;
+    outline: none;
+    border: none;
+    z-index: 300;
+    transition: 0.1s ease-in;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.signboard p {
+    position: absolute;
+    bottom: 40px;
+    left: 50%;
+    padding: 2px 10px;
+    transform: translatex(-50%);
+    font-family: "Dosis", sans-serif;
+    font-size: 26px;
+    font-weight: bold;
+    color: #f5f5f5;
+    border-radius: 36px;
+    text-align: center;
+    outline: none;
+    border: none;
+    z-index: 300;
+    transition: 0.1s ease-in;
 }
