--- a/public/css/style.css
+++ b/public/css/style.css
@@ -205,7 +205,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .popup {
-    width: 400px;
+    width: 36rem;
     background: #f5f5f5;
     border-radius: 6px;
     position: absolute;
@@ -213,7 +213,7 @@ input[type="number"]::-webkit-outer-spin-button {
     left: 50%;
     transform: translate(-50%, -50%) scale(0.1);
     text-align: center;
-    padding: 0 30px 30px;
+    padding: 0 1.875rem 3.125rem;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     visibility: hidden;
     transition: transform 0.4s, top 0.4s;
@@ -275,7 +275,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .signboard p {
     position: absolute;
-    bottom: 40px;
+    bottom: 3.125rem;
     left: 50%;
     padding: 2px 10px;
     transform: translatex(-50%);
