--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,10 +19,10 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .spinner {
     position: relative;
-    height: 400px;
-    width: 400px;
-    min-height: 400px;
-    min-width: 400px;
+    height: 25rem;
+    width: 25rem;
+    min-height: 25rem;
+    min-width: 25rem;
     border-radius: 50%;
     box-shadow: 0px 0px 44px rgba(17, 17, 17, 0.25);
     overflow: hidden;
@@ -232,14 +232,14 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .popup h2 {
-    font-size: 32px;
-    font-weight: 500px;
+    font-size: 56px;
+    font-weight: bold;
     margin: 20px 0 20px;
 }
 
 .popup h3 {
-    font-size: 22px;
-    font-weight: 500px;
+    font-size: 42px;
+    font-weight: bold;
     margin: 20px 0 20px;
 }
 
