--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,8 +40,8 @@ input[type="number"]::-webkit-outer-spin-button {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 140px;
-    width: 140px;
+    height: 8.75rem;
+    width: 8.75rem;
     border-radius: 50%;
     font-family: "Dosis", sans-serif;
     font-weight: bold;
