Fix size and style

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,18 +20,18 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .spinner {
     position: relative;
-    height: 25rem;
-    width: 25rem;
+    height: 50rem;
+    width: 50rem;
     border-radius: 50%;
     box-shadow: 0px 0px 44px rgba(17, 17, 17, 0.25);
     overflow: hidden;
 }
 .spinner__body {
     position: absolute;
-    border-top: 12.5rem solid transparent;
-    border-right: 12.5rem solid #212a3e;
-    border-bottom: 12.5rem solid #212a3e;
-    border-left: 12.5rem solid #212a3e;
+    border-top: 25rem solid transparent;
+    border-right: 25rem solid #212a3e;
+    border-bottom: 25rem solid #212a3e;
+    border-left: 25rem solid #212a3e;
     z-index: 200;
 }
 .spinner__start-button {
@@ -39,8 +39,8 @@ input[type="number"]::-webkit-outer-spin-button {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 8.75rem;
-    width: 8.75rem;
+    height: 20rem;
+    width: 20rem;
     border-radius: 50%;
     font-family: "Dosis", sans-serif;
     font-weight: bold;
@@ -58,14 +58,14 @@ input[type="number"]::-webkit-outer-spin-button {
         background-color 0.1s ease-in;
 }
 .spinner__start-button:hover {
-    height: 9.375rem;
-    width: 9.375rem;
+    height: 22rem;
+    width: 22rem;
     background-color: #e49393;
     box-shadow: 0px 0px 44px rgba(17, 17, 17, 0.25);
 }
 .spinner__start-button:active {
-    height: 8.438rem;
-    width: 8.438rem;
+    height: 18rem;
+    width: 18rem;
     color: #9ba4b5;
     background-color: #394867;
     box-shadow: none;
@@ -99,8 +99,8 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 .spinner__plate {
     position: absolute;
-    height: 25rem;
-    width: 25rem;
+    height: 50rem;
+    width: 50rem;
 }
 .spinner__plate--spin {
     -webkit-animation: spinning 2s ease-out;
@@ -111,11 +111,11 @@ input[type="number"]::-webkit-outer-spin-button {
     top: 0;
     left: 50%;
     transform: translatex(-50%);
-    height: calc(12.5rem - 2.5rem);
-    padding-top: 40px;
+    height: calc(22rem - 1rem);
+    padding-top: 4rem;
     font-family: "Dosis", sans-serif;
     font-weight: bold;
-    font-size: 48px;
+    font-size: 108px;
     color: #212a3e;
     text-align: center;
     transform-origin: 50% 100%;
@@ -127,14 +127,14 @@ input[type="number"]::-webkit-outer-spin-button {
     top: 0;
     left: 50%;
     transform: translatex(-50%);
-    border-top: 12.5rem solid #f5f5f5;
-    border-right: 12.5rem solid transparent;
-    border-bottom: 12.5rem solid transparent;
-    border-left: 12.5rem solid transparent;
+    border-top: 25rem solid #f5f5f5;
+    border-right: 25rem solid transparent;
+    border-bottom: 25rem solid transparent;
+    border-left: 25rem solid transparent;
     z-index: -1;
 }
 .spinner__item:nth-child(even):before {
-    border-top: 12.5rem solid #ebebeb;
+    border-top: 25rem solid #ebebeb;
 }
 .spinner__item--left {
     transform: translatex(-50%) rotate(-90deg);
@@ -204,7 +204,8 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .popup {
-    width: 36rem;
+    width: 50rem;
+    height: 40rem;
     background: #f5f5f5;
     border-radius: 6px;
     position: absolute;
@@ -231,26 +232,26 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .popup h2 {
-    font-size: 62px;
+    font-size: 82px;
     font-weight: bold;
-    margin: 1.25rem 0 1.25rem;
+    margin: 3rem 0 3rem;
 }
 
 .popup h3 {
-    font-size: 52px;
+    font-size: 62px;
     font-weight: bold;
-    margin: 1.25rem 0 1.25rem;
+    margin: 3rem 0 3rem;
 }
 
 .popup button {
     color: #f5f5f5;
     font-family: "Dosis", sans-serif;
-    font-size: 32px;
-    margin-top: 3.125rem;
+    font-size: 48px;
+    margin-top: 4rem;
     background-color: #394867;
     border-radius: 5%;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    padding: 1.5rem 2rem;
+    padding: 1.2rem 4rem;
     outline: none;
     border: 0;
     cursor: pointer;
@@ -259,6 +260,8 @@ input[type="number"]::-webkit-outer-spin-button {
 .logo {
     position: relative;
     margin-bottom: 5rem;
+    width: 80%;
+    height: 80%;
     top: 50%;
     left: 50%;
     transform: translatex(-50%);
@@ -276,10 +279,10 @@ input[type="number"]::-webkit-outer-spin-button {
     position: absolute;
     bottom: 3.125rem;
     left: 50%;
-    padding: 2px 10px;
+    margin-bottom: 5rem;
     transform: translatex(-50%);
     font-family: "Dosis", sans-serif;
-    font-size: 26px;
+    font-size: 56px;
     font-weight: bold;
     color: #f5f5f5;
     border-radius: 36px;
